--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,6 +114,7 @@ a {
           position: relative;
           input {
             flex: 1;
+            width: 100%;
             font-family: $poppins;
             font-size: 16px;
             font-weight: 600;
