increased icon size

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,6 +131,7 @@ a {
           }
           .fas.fa-exclamation-circle {
             position: absolute;
+            font-size: 18px;
             right: 20px;
             top: 20px;
             color: $primaryRed;
